# UMLS-GraphRAG

./: README.md  flake.nix  pyproject.toml
src/benchmark/: .env_example  SOURCE.md  main.py  stats.py
src/benchmark/generation/: __init__.py  basic_generator.py
src/benchmark/resources/prompt/: generator_system_native.md  generator_system_rag.md  retrieval_system.md  user.md
src/benchmark/results/medqa/: native_0015.json  native_0046.json  native_0069.json  native_0176.json  native_0204.json  rag_0000.json  rag_0005.json  rag_0008.json  rag_0011.json  rag_0012.json  rag_0013.json  rag_0014.json  rag_0017.json  rag_0019.json  rag_0022.json  rag_0023.json  rag_0024.json  rag_0025.json  rag_0029.json  rag_0030.json  rag_0031.json  rag_0034.json  rag_0035.json  rag_0037.json  rag_0038.json  rag_0040.json  rag_0043.json  rag_0045.json  rag_0048.json  rag_0052.json  rag_0054.json  rag_0058.json  rag_0059.json  rag_0060.json  rag_0063.json  rag_0064.json  rag_0065.json  rag_0066.json  rag_0071.json  rag_0084.json  (+53 more)
src/benchmark/retrieval/: __init__.py  graph.py
src/benchmark/retrieval/database/: __init__.py  neo4j.py
src/benchmark/util/: __init__.py  system_prompt.py  user_prompt.py
src/examples/basic/util/: __init__.py  cleaner.py  compose.py  generator_system_prompt.py
src/examples/no-graphygie-neo4j/: .env_example  embedding.py  main.py  pyproject.toml
src/examples/no_graphygie_neo4j/: embedding.py  main.py
src/examples/ollama/: main.py
src/examples/openrouter/: .env_example  main.py
src/examples/openrouter/resources/prompt/: retrieval_system.md
src/graphygie/generation/: __init__.py  basic_generator.py
src/graphygie/llm/: chat.py  llm.py  ollama.py  openai.py
src/graphygie/retrieval/: __init__.py  graph.py
src/graphygie/retrieval/database/: database.py  neo4j.py
src/util/: read_to_string.py  unwrap.py  user_prompt.py
