[project]
name = "graphygie"
version = "0.1.0"
description = "A Python library (Graphygie) to simplify building GraphRAG pipelines"
readme = "README.md"
authors = [
    { name = "c2fc2f", email = "contact@c2fc2f.com" }
]
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.2",
    "ollama>=0.6.0",
    "openai>=2.6.1",
]

[project.optional-dependencies]
examples = [
    "python-dotenv>=1.2.1",
    "regex>=2025.10.23",
    "langchain-ollama>=1.0.0",
    "neo4j-graphrag>=1.10.1",
    "tqdm>=4.67.1",
]

[project.scripts]
graphygie-ollama = "examples.ollama.main:main"
graphygie-openrouter = "examples.openrouter.main:main"

no-graphygie-neo4j = "examples.no_graphygie_neo4j.main:main"
no-graphygie-neo4j-embedding = "examples.no_graphygie_neo4j.embedding:main"


[build-system]
requires = [
  "uv_build>=0.8.23,<0.9.0"
]
build-backend = "uv_build"
